--- a/website/style/mystyle.css
+++ b/website/style/mystyle.css
@@ -43,8 +43,8 @@ table {
 /* Tooltip container */
 .tooltip {
   position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+/*  display: inline-block;*/
+ /* border-bottom: 1px dotted black;  If you want dots under the hoverable text */
 }
 
 /* Tooltip text */
