--- a/website/style/mystyle.css
+++ b/website/style/mystyle.css
@@ -60,9 +60,14 @@ table {
   /* Position the tooltip text - see examples below! */
   position: absolute;
   z-index: 1;
+
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
   visibility: visible;
+  opacity: 1;
+
 }
